alteracao de status

--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
 </head>
 
 <body>
-  <h1>RagnaDB</h1>
-  <p id="loading"></p>
+  <h1>Pokémon DB</h1>
   <form>
-    Digite o ID do monstro: <input type="number" name="id" id="id"
-      placeholder="Digite o ID do monstro">
-    <input type="submit" value="Enviar" id="botao">
+    Nome: <input type="text" name="nome" id="nome"
+      placeholder="Digite o nome do monstro"><br><br>
+    <input type="submit" value="Procurar" id="botao">
   </form>
   <div id="posts-container"></div>
 </body>
