ajustes no display

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <h1>Pokémon DB</h1>
   <form>
     Nome: <input type="text" name="nome" id="nome"
-      placeholder="Digite o nome do monstro"><br><br>
+      placeholder="Digite o nome"><br><br>
     <input type="submit" value="Procurar" id="botao">
   </form>
   <div id="posts-container"></div>
